--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,14 +23,14 @@
         "strict": true /* Enable all strict type-checking options. */,
         "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
         "strictNullChecks": true /* Enable strict null checks. */,
-        "strictFunctionTypes": false /* Enable strict checking of function types. */,
+        "strictFunctionTypes": true /* Enable strict checking of function types. */,
         "noImplicitThis": false /* Raise error on 'this' expressions with an implied 'any' type. */,
         "alwaysStrict": true /* Parse in strict mode and emit "use strict" for each source file. */,
 
         /* Additional Checks */
-        "noUnusedLocals": false /* Report errors on unused locals. */,
-        "noUnusedParameters": false /* Report errors on unused parameters. */,
-        "noImplicitReturns": false /* Report error when not all code paths in function return a value. */,
+        "noUnusedLocals": true /* Report errors on unused locals. */,
+        "noUnusedParameters": true /* Report errors on unused parameters. */,
+        "noImplicitReturns": true /* Report error when not all code paths in function return a value. */,
         "noFallthroughCasesInSwitch": true /* Report errors for fallthrough cases in switch statement. */,
 
         /* Module Resolution Options */
