--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
         "typescript": "^3.7.4"
     },
     "dependencies": {
+        "express": "4.17.1",
         "express-openapi": "^6.0.0",
         "nanoid": "^2.1.9",
         "openapi-default-setter": "^2.1.0",
         "openapi-request-validator": "^4.2.0",
+        "openapi-response-validator": "^4.0.0",
         "openapi-schema-validator": "^3.0.3",
         "openapi-types": "^1.3.5"
     },
