--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
 
         /* Strict Type-Checking Options */
         "strict": true /* Enable all strict type-checking options. */,
-        "noImplicitAny": false /* Raise error on expressions and declarations with an implied 'any' type. */,
+        "noImplicitAny": true /* Raise error on expressions and declarations with an implied 'any' type. */,
         "strictNullChecks": true /* Enable strict null checks. */,
         "strictFunctionTypes": true /* Enable strict checking of function types. */,
         "noImplicitThis": false /* Raise error on 'this' expressions with an implied 'any' type. */,
