--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "license": "MIT",
     "devDependencies": {
         "@types/express": "^4.17.2",
+        "@types/multer": "^1.3.10",
         "@types/nanoid": "^2.1.0",
         "@types/node": "^13.1.6",
         "@types/node-red": "^0.20.1",
@@ -37,11 +38,8 @@
     },
     "dependencies": {
         "express": "4.17.1",
-        "express-openapi": "^6.0.0",
+        "express-openapi-validator": "^3.6.4",
         "nanoid": "^2.1.9",
-        "openapi-default-setter": "^2.1.0",
-        "openapi-request-validator": "^4.2.0",
-        "openapi-response-validator": "^4.0.0",
         "openapi-schema-validator": "^3.0.3",
         "openapi-types": "^1.3.5"
     },
