--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "author": "Node-Red Community",
     "license": "MIT",
     "devDependencies": {
+        "@types/cuid": "^1.3.0",
         "@types/express": "^4.17.2",
         "@types/multer": "^1.3.10",
-        "@types/nanoid": "^2.1.0",
         "@types/node": "^13.1.6",
         "@types/node-red": "^0.20.1",
         "cpy-cli": "^3.0.0",
@@ -37,9 +37,9 @@
         "typescript": "^3.7.4"
     },
     "dependencies": {
+        "cuid": "^2.1.8",
         "express": "^4.17.1",
         "express-openapi-validator": "^3.6.4",
-        "nanoid": "^2.1.9",
         "openapi-schema-validator": "^3.0.3",
         "openapi-types": "^1.3.5"
     },
