--- a/package.json
+++ b/package.json
@@ -3,6 +3,20 @@
     "version": "0.1.0",
     "description": "OpenAPI driven custom HTTP nodes",
     "main": "lib/index.js",
+    "keywords": [
+        "node-red",
+        "openapi"
+    ],
+    "author": "Node-Red Community",
+    "license": "MIT",
+    "homepage": "https://github.com/node-red-tools/node-red-contrib-openapi#readme",
+    "bugs": {
+        "url": "https://github.com/node-red-tools/node-red-contrib-openapi/issues"
+      },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/node-red-tools/node-red-contrib-openapi.git"
+    },
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "npm run clean && npm run build:ts && npm run build:html && npm run build:assets",
@@ -12,12 +26,6 @@
         "clean": "rimraf lib/",
         "fmt": "pretty-quick"
     },
-    "keywords": [
-        "node-red",
-        "openapi"
-    ],
-    "author": "Node-Red Community",
-    "license": "MIT",
     "devDependencies": {
         "@types/cuid": "^1.3.0",
         "@types/express": "^4.17.2",
