--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "homepage": "https://github.com/node-red-tools/node-red-contrib-openapi#readme",
     "bugs": {
         "url": "https://github.com/node-red-tools/node-red-contrib-openapi/issues"
-      },
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/node-red-tools/node-red-contrib-openapi.git"
@@ -24,7 +24,8 @@
         "build:html": "cpy 'src/*.html' 'lib/'",
         "build:assets": "cpy 'assets/icons/*' 'lib/icons'",
         "clean": "rimraf lib/",
-        "fmt": "pretty-quick"
+        "fmt": "pretty-quick",
+        "prepublish": "npm run build"
     },
     "devDependencies": {
         "@types/cuid": "^1.3.0",
@@ -32,6 +33,7 @@
         "@types/multer": "^1.3.10",
         "@types/node": "^13.1.6",
         "@types/node-red": "^0.20.1",
+        "@types/object-hash": "^1.3.1",
         "cpy-cli": "^3.0.0",
         "cross-env": "^6.0.3",
         "husky": "^4.0.6",
@@ -48,6 +50,7 @@
         "cuid": "^2.1.8",
         "express": "^4.17.1",
         "express-openapi-validator": "^3.6.4",
+        "object-hash": "^2.0.3",
         "openapi-schema-validator": "^3.0.3",
         "openapi-types": "^1.3.5"
     },
